brain/sources/prod-metadata/objects/Job_Submission__c/Job_Submission__c.object-meta.xml
<CustomObject>
    <description>Connects a Candidate Person Account to a specific Job Requirement. Tracks the full candidate lifecycle from internal suggestion and Account Manager review to client submission, interview scheduling, offer, and placement outcome. Stores candidate rate, submitted bill rate, expected margin, resume, and client feedback.</description>
    <label>Job Submission</label>
    <nameField>
        <displayFormat>JS-{00000}</displayFormat>
        <label>Job Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>