brain/sources/prod-metadata/objects/Job_Submission__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Manager responsible for reviewing and approving this submission. Auto-populated from Job Requirement Account Manager field.</description>
    <inlineHelpText>Auto-populated from the Job Requirement. Shows which AM needs to review and approve this submission.</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Submissions1</relationshipName>
    <type>Lookup</type>
</CustomField>