brain/sources/prod-metadata/objects/Job_Submission__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <description>For asking applicant Email</description>
    <inlineHelpText>For asking applicant Email</inlineHelpText>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>