brain/sources/prod-metadata/objects/Job_Submission__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <description>Applicant Name for candidate</description>
    <inlineHelpText>Applicant Name for candidate</inlineHelpText>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>