brain/sources/prod-metadata/objects/Job_Submission__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>When the candidate is available to start or interview. Entered by recruiter during submission. Shared with client.</description>
    <inlineHelpText>Enter candidate availability. Example: Immediate, 2 weeks notice, Available from June 15, Currently on project until July.</inlineHelpText>
    <label>Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>