brain/sources/prod-metadata/objects/Job_Submission__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The candidate (Person Account) being submitted for this job. MUST be a Candidate Person Account. Business Accounts not allowed. Validation rule enforces this.</description>
    <inlineHelpText>Select the candidate you are submitting. Only Candidate Person Accounts are valid. The Submit Candidate Profile flow filters to show only Person Accounts.</inlineHelpText>
    <label>Candidate</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Submissions</relationshipLabel>
    <relationshipName>Job_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>