brain/sources/prod-metadata/objects/Job_Submission__c/fields/Candidate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Rate__c</fullName>
    <description>The rate the candidate expects or has agreed to. Entered by recruiter during submission. Used to calculate Expected Margin.</description>
    <inlineHelpText>Enter the candidate expected hourly rate or salary. For hourly enter per-hour rate. For salary enter annual amount. Required for margin calculation.</inlineHelpText>
    <label>Candidate Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>