brain/sources/prod-metadata/objects/Job_Submission__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Submissions (Client Account)</relationshipLabel>
    <relationshipName>Job_Submissions1</relationshipName>
    <type>Lookup</type>
</CustomField>