brain/sources/prod-metadata/objects/Job_Submission__c/fields/Client_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Feedback__c</fullName>
    <description>Feedback received from the client after reviewing this candidate or after interview. Entered by AM. Used for reporting and improving future submissions.</description>
    <inlineHelpText>Enter client feedback about this candidate. Example: Rate too high, Strong technical fit but location concern, Interested - scheduling interview. Updated after client response.</inlineHelpText>
    <label>Client Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>