brain/sources/prod-metadata/objects/Job_Submission__c/fields/Client_Lead__c.field-meta.xml
<CustomField>
    <fullName>Client_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Job Submissions (Client Lead)</relationshipLabel>
    <relationshipName>Job_Submissions1</relationshipName>
    <type>Lookup</type>
</CustomField>