brain/sources/prod-metadata/objects/Job_Submission__c/fields/Client_Submission_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Client_Submission_Date_Time__c</fullName>
    <description>Date and time when AM submitted this profile to the client. Auto-set by Approve and Submit to Client flow. Required by validation rule when status = Submitted to Client.</description>
    <inlineHelpText>Auto-set when AM runs Approve and Submit to Client flow. Used to measure time from internal submission to client submission.</inlineHelpText>
    <label>Client Submission Date/Time</label>
    <type>DateTime</type>
</CustomField>