brain/sources/prod-metadata/objects/Job_Submission__c/fields/Expected_Margin__c.field-meta.xml
<CustomField>
    <fullName>Expected_Margin__c</fullName>
    <description>SENSITIVE. Auto-calculated difference between Submitted Bill Rate and Candidate Rate. Represents actual margin on this submission. Visible only to AM and Leadership.</description>
    <formula>Submitted_Bill_Rate__c - Candidate_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated. Shows expected profit margin for this specific submission. Visible only to Account Managers and Leadership.</inlineHelpText>
    <label>Expected Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>