brain/sources/prod-metadata/objects/Job_Submission__c/fields/Internal_Submission_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Internal_Submission_Date_Time__c</fullName>
    <description>Date and time when the team member submitted this candidate profile. Auto-populated by the Submit Candidate Profile flow.</description>
    <inlineHelpText>Auto-populated when team submits candidate via flow. Used to measure time from requirement received to first internal submission.</inlineHelpText>
    <label>Internal Submission Date/Time</label>
    <type>DateTime</type>
</CustomField>