brain/sources/prod-metadata/objects/Job_Submission__c/fields/Interview_Requested__c.field-meta.xml
<CustomField>
    <fullName>Interview_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked automatically when an Interview record is created from this submission via the Create Interview flow. Used in Interview Requested list view.</description>
    <inlineHelpText>Auto-checked by Create Interview flow. Do not manually edit. Used to filter submissions that have interviews in the Interview Requested/Scheduled list view.</inlineHelpText>
    <label>Interview Requested</label>
    <type>Checkbox</type>
</CustomField>