brain/sources/prod-metadata/objects/Job_Submission__c/fields/Job_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Job_Requirement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent Job Requirement record for this submission. Links this candidate submission to the specific open job.</description>
    <inlineHelpText>Select the Job Requirement this candidate is being submitted for. Required field. Cannot be changed after creation.</inlineHelpText>
    <label>Job Requirement</label>
    <referenceTo>Job_Requirement__c</referenceTo>
    <relationshipLabel>Job Submissions</relationshipLabel>
    <relationshipName>Job_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>