brain/sources/prod-metadata/objects/Job_Submission__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked Lead record for website applicants. Used when JS is created from a Lead before the candidate is converted to a Person Account. Enables tracking applicant history.</description>
    <inlineHelpText>Auto-set by Flow 7 (Website Lead to JS) when creating JS from a website applicant Lead. Either Candidate or Lead must be filled (validation rule enforces this).</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Job Submissions</relationshipLabel>
    <relationshipName>Job_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>