brain/sources/prod-metadata/objects/Job_Submission__c/fields/Offer_Received__c.field-meta.xml
<CustomField>
    <fullName>Offer_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked automatically when Interview Outcome = Offer Received via Interview Outcome Sync flow. Indicates client has made an offer to this candidate.</description>
    <inlineHelpText>Auto-checked by Interview Outcome Sync flow when client makes offer. Used for offer tracking and conversion ratio reporting.</inlineHelpText>
    <label>Offer Received</label>
    <type>Checkbox</type>
</CustomField>