brain/sources/prod-metadata/objects/Job_Submission__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <description>Final placement outcome for this candidate submission. Updated manually by AM or automatically by Interview Outcome Sync flow.</description>
    <inlineHelpText>Select the final placement outcome. Not Placed = default. Offered = offer received. Placed = candidate started. Lost = offer declined or fell through.</inlineHelpText>
    <label>Placement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Placed</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>