brain/sources/prod-metadata/objects/Job_Submission__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <description>Whether rates are hourly, salary, or daily. Defaults from Job Requirement Rate Type field.</description>
    <inlineHelpText>Select Hourly for contract positions, Salary for full-time, Daily for daily consulting rates. Defaults from Job Requirement.</inlineHelpText>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>