brain/sources/prod-metadata/objects/Job_Submission__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason why this candidate was rejected either internally or by the client. Used for dashboard reporting and improving submission quality.</description>
    <inlineHelpText>Select the rejection reason when marking a submission as Rejected. Used in Rejected Submissions by Reason dashboard component.</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate High</fullName>
            </value>
            <value>
                <fullName>Skill Mismatch</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>