brain/sources/prod-metadata/objects/Job_Submission__c/fields/Skills_Match_Notes__c.field-meta.xml
<CustomField>
    <fullName>Skills_Match_Notes__c</fullName>
    <description>Detailed notes explaining why this candidate matches the job requirements. Written by recruiter. Reviewed by AM before client submission.</description>
    <inlineHelpText>Explain how the candidate skills match the job requirements point by point. Example: Job requires Apex - Candidate has 5 years Apex experience.</inlineHelpText>
    <label>Skills Match Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>