brain/sources/prod-metadata/objects/Job_Submission__c/fields/Slack_Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_Thread_ID__c</fullName>
    <label>Slack Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>