brain/sources/prod-metadata/objects/Job_Submission__c/fields/Submission_Source__c.field-meta.xml
<CustomField>
    <fullName>Submission_Source__c</fullName>
    <label>Submission Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Recruiter</fullName>
            </value>
            <value>
                <fullName>Website Applicant</fullName>
            </value>
            <value>
                <fullName>Candidate Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>