brain/sources/prod-metadata/objects/Job_Submission__c/fields/Submission_Status__c.field-meta.xml
<CustomField>
    <fullName>Submission_Status__c</fullName>
    <description>Current status of this candidate submission in the pipeline. Updated manually by AM and automatically by Interview Outcome Sync flow.</description>
    <inlineHelpText>Suggested by Team = internal suggestion. Pending AM Review = waiting for AM. Submitted to Client = AM approved and sent. Placed = candidate started.</inlineHelpText>
    <label>Submission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending AM Review</fullName>
                <default>true</default>
                <label>Pending AM Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Submitted to Client</fullName>
            </value>
            <value>
                <fullName>Client Shortlisted</fullName>
                <label>Shortlisted for Interview</label>
            </value>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Interview Completed</fullName>
            </value>
            <value>
                <fullName>Shortlisted for Next Round</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Offer Received</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Suggested by Team</fullName>
                <isActive>false</isActive>
                <label>Suggested by Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>