brain/sources/prod-metadata/objects/Job_Submission__c/fields/Submitted_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Bill_Rate__c</fullName>
    <description>SENSITIVE. The rate AM submitted to the client for this candidate. Entered during Approve and Submit to Client flow. Required when status = Submitted to Client.</description>
    <inlineHelpText>Enter the hourly or salary rate being submitted to the client. This may differ from Client Bill Rate on Job Requirement if AM negotiated differently.</inlineHelpText>
    <label>Submitted Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>