brain/sources/prod-metadata/objects/Job_Submission__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Techsara team member who submitted this candidate profile. Auto-populated with the running user in the Submit Candidate Profile flow.</description>
    <inlineHelpText>Auto-populated with the user who ran the Submit Candidate Profile flow. Used for recruiter performance reporting.</inlineHelpText>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>