brain/sources/prod-metadata/objects/Job_Submission__c/fields/Unique_Submission_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Submission_Key__c</fullName>
    <description>Combination of Job Requirement ID and Candidate ID that prevents duplicate submissions. Auto-generated by Submit Candidate Profile flow. Enforces one submission per candidate per job.</description>
    <inlineHelpText>Auto-generated by Submit Candidate Profile flow as Job Req ID + Candidate ID. If a duplicate submission is attempted, the flow will show an error and stop.</inlineHelpText>
    <label>Unique Submission Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>