brain/sources/prod-metadata/objects/Job_Submission__c/fields/Visa_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Visa_Confirmation__c</fullName>
    <description>Snapshot of candidate visa status at time of submission. Entered by recruiter from candidate record. Shared with client in submission.</description>
    <inlineHelpText>Enter the candidate visa or work authorization status. Example: US Citizen, Green Card Holder, H1B (valid through 2027). Confirm with candidate before entering.</inlineHelpText>
    <label>Visa Confirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>