brain/sources/prod-metadata/objects/Job_Submission__c/validationRules/Bill_Rate_Required_On_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_Rate_Required_On_Submit</fullName>
    <active>true</active>
    <description>Submitted Bill Rate is required when submitting profile to client.</description>
    <errorConditionFormula>ISPICKVAL(Submission_Status__c,&apos;Submitted to Client&apos;) &amp;&amp; ISBLANK(Submitted_Bill_Rate__c)</errorConditionFormula>
    <errorDisplayField>Submitted_Bill_Rate__c</errorDisplayField>
    <errorMessage>Submitted Bill Rate is required when submitting profile to client.</errorMessage>
</ValidationRule>