brain/sources/prod-metadata/objects/Job_Submission__c/validationRules/Candidate_OR_Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_OR_Lead_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK(Candidate__c),
  ISBLANK(Lead__c)
)</errorConditionFormula>
    <errorMessage>Either Candidate or Lead must be linked to this Job Submission.</errorMessage>
</ValidationRule>