brain/sources/prod-metadata/objects/Job_Submission__c/validationRules/Client_Date_Required_On_Submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Date_Required_On_Submit</fullName>
    <active>true</active>
    <description>Client Submission Date/Time is required when status is Submitted to Client.</description>
    <errorConditionFormula>ISPICKVAL(Submission_Status__c,&apos;Submitted to Client&apos;) &amp;&amp; ISBLANK(Client_Submission_Date_Time__c)</errorConditionFormula>
    <errorDisplayField>Client_Submission_Date_Time__c</errorDisplayField>
    <errorMessage>Client Submission Date/Time is required when status is Submitted to Client.</errorMessage>
</ValidationRule>